--- a/Android- Part3/SIH2020/app/src/main/AndroidManifest.xml
+++ b/Android- Part3/SIH2020/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.sih2020">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <dist:module dist:instant="true" />
 
@@ -17,7 +18,6 @@
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -25,17 +25,21 @@
         <activity android:name=".OnBoarding" />
         <activity android:name=".MapActivity" />
         <activity android:name=".Login" />
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA5gMcKu6oQVR0gXR3D6Wx0z4YT54TuZSg" />
+
+
     </application>
 
 </manifest>
