--- a/Android- Part3/SIH2020/gradle.properties
+++ b/Android- Part3/SIH2020/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+GOOGLE_MAPS_API_KEY=AIzaSyB8AvNtc-ZycPv9vQ03NuX9ov_6vJwKelk
